# gazelle_java_example

./: BUILD  README.md  WORKSPACE  maven_install.json  parser_path.patch  pom.xml
src/main/java/com/mycompany/app/: App.java  BUILD.bazel
src/test/java/com/mycompany/app/: BUILD.bazel
