load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "app",
    srcs = ["App.java"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)

java_binary(
    name = "App",
    main_class = "com.mycompany.app.App",
    visibility = ["//visibility:public"],
    runtime_deps = [":app"],
)
